--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <body>
 
     <section class="container">
+
+        <input type="text" class="form-control w-50 m-auto mt-2" placeholder="Search....." id="Search">
         <div id="products" class="row text-center ">
 
         </div>
