--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <section class="container">
 
         <input type="text" class="form-control w-50 m-auto mt-2" placeholder="Search....." id="Search">
+       
+         <button class="btn btn-lg btn-warning m-4" id="btn">Sort By lowest price</button>
+       
         <div id="products" class="row text-center ">
 
         </div>
